added classes to html

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -4,27 +4,30 @@
   <title>TicTacToeGame</title>
   <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
-<div id="game">
+<body>
 
-  <div>
-    <button></button>
-    <button></button>
-    <button></button>
+  <div class="game">
+
+    <div>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+
+    <div>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+
+    <div>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
   </div>
 
-  <div>
-    <button></button>
-    <button></button>
-    <button></button>
-  </div>
-
-  <div>
-    <button></button>
-    <button></button>
-    <button></button>
-  </div>
-</div>
-
-<div id="gameDisplay"></div>
+  <div class="gameDisplay"></div>
+</body>
 <script src="main.js"></script>
 </html>
